--- a/notebooks/isorc_torch.ipynb
+++ b/notebooks/isorc_torch.ipynb
@@ -69,8 +69,8 @@
     "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
     "\n",
-    "isorc = ISORC(orcmanl)\n",
-    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=500)"
+    "isorc = ISORC(orcmanl, init='spectral', dim=2)\n",
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=2000)"
    ]
   },
   {
@@ -79,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_dict = animation.animate_3D(\n",
+    "%autoreload 2\n",
+    "fig_dict = animation.animate_2D(\n",
     "    {\n",
     "        'Xs': X_frames,\n",
     "        'G': orcmanl.G,\n",
@@ -138,7 +139,7 @@
     "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
     "isorc = ISORC(orcmanl)\n",
-    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=500)"
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=200)"
    ]
   },
   {
@@ -148,7 +149,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "fig_dict = animation.animate_3D(\n",
+    "fig_dict = animation.animate_2D(\n",
     "    {\n",
     "        'Xs': X_frames,\n",
     "        'G': orcmanl.G\n",
@@ -198,8 +199,8 @@
     "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
     "\n",
-    "isorc = ISORC(orcmanl)\n",
-    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=400)"
+    "isorc = ISORC(orcmanl, dim=3)\n",
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=2000)"
    ]
   },
   {
