adding quadratics to notebook

--- a/notebooks/isorc_torch.ipynb
+++ b/notebooks/isorc_torch.ipynb
@@ -11,7 +11,16 @@
     "from src.plotting import *\n",
     "from src.utils.graph_utils import *\n",
     "from src.isorc import *\n",
-    "%load_ext autoreload"
+    "%load_ext autoreload\n",
+    "\n",
+    "exp_params = {\n",
+    "    'dataset': '3D_swiss_roll',\n",
+    "    'mode': 'nbrs',\n",
+    "    'n_neighbors': 15,\n",
+    "    'epsilon': None,\n",
+    "    'lda': 0.01,\n",
+    "    'delta': 0.8\n",
+    "}"
    ]
   },
   {
@@ -23,15 +32,6 @@
     "n_points = 2500\n",
     "noise = 6.2\n",
     "noise_thresh = 2.2\n",
-    "\n",
-    "exp_params = {\n",
-    "    'dataset': '3D_swiss_roll',\n",
-    "    'mode': 'nbrs',\n",
-    "    'n_neighbors': 15,\n",
-    "    'epsilon': None,\n",
-    "    'lda': 0.01,\n",
-    "    'delta': 0.8\n",
-    "}\n",
     "\n",
     "dataset_info = {\n",
     "    'name': '3D_swiss_roll',\n",
@@ -139,7 +139,7 @@
     "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
     "isorc = ISORC(orcmanl)\n",
-    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=200)"
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=1000)"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
     "\n",
-    "isorc = ISORC(orcmanl, dim=3)\n",
+    "isorc = ISORC(orcmanl, dim=2)\n",
     "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=2000)"
    ]
   },
@@ -209,7 +209,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_graph_2D(X_opt, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig_dict = animation.animate_3D(\n",
+    "    {\n",
+    "        'Xs': X_frames,\n",
+    "        'G': orcmanl.G\n",
+    "    }\n",
+    ")\n",
+    "fig_sim = go.Figure(fig_dict)\n",
+    "fig_sim.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quadratics\n",
+    "n_points = 2000\n",
+    "noise = 0.20\n",
+    "noise_thresh = 0.45\n",
+    "\n",
+    "dataset_info = {\n",
+    "    'name': 'quadratics',\n",
+    "    'n_points': n_points,\n",
+    "    'noise': noise,\n",
+    "    'noise_thresh': noise_thresh\n",
+    "}\n",
+    "\n",
+    "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcmanl = ORCManL(\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    reattach=True\n",
+    ")\n",
+    "orcmanl.fit(return_dict['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "import gc\n",
+    "torch.cuda.empty_cache()\n",
+    "gc.collect()\n",
+    "\n",
+    "isorc = ISORC(orcmanl, dim=2, init='spectral')\n",
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_dict = animation.animate_2D(\n",
     "    {\n",
     "        'Xs': X_frames,\n",
     "        'G': orcmanl.G\n",
