--- a/notebooks/isorc_torch.ipynb
+++ b/notebooks/isorc_torch.ipynb
@@ -6,11 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data.data import *\n",
+    "from src.data.data import *\n",
     "from src.orcml import *\n",
     "from src.plotting import *\n",
     "from src.utils.graph_utils import *\n",
     "from src.isorc import *\n",
+    "from src.utils.embeddings import *\n",
+    "from sklearn.manifold import TSNE\n",
+    "import umap\n",
     "%load_ext autoreload\n",
     "\n",
     "exp_params = {\n",
@@ -80,14 +83,39 @@
    "outputs": [],
    "source": [
     "%autoreload 2\n",
-    "fig_dict = animation.animate_2D(\n",
-    "    {\n",
-    "        'Xs': X_frames,\n",
-    "        'G': orcmanl.G,\n",
-    "    }\n",
-    ")\n",
-    "fig_sim = go.Figure(fig_dict)\n",
-    "fig_sim.show()"
+    "plot_graph_2D(X_opt, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tsne = tsne(orcmanl.A, n_components=2)\n",
+    "plot_graph_2D(X_tsne, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# umap\n",
+    "X_umap = UMAP(orcmanl.A, n_components=2, n_neighbors=exp_params['n_neighbors'])\n",
+    "plot_graph_2D(X_umap, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distortion(X_opt, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_tsne, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_umap, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())"
    ]
   },
   {
@@ -110,8 +138,7 @@
     "    'delta': 0.8\n",
     "}\n",
     "\n",
-    "return_dict = concentric_circles(n_points, factor, noise, noise_thresh, supersample_factor=1.0, dim=3)\n",
-    "circles, cluster, circles_supersample, subsample_indices = return_dict['data'], return_dict['cluster'], return_dict['data_supersample'], return_dict['subsample_indices']\n"
+    "return_dict = concentric_circles(n_points, factor, noise, noise_thresh, supersample_factor=1.0, dim=3)"
    ]
   },
   {
@@ -125,7 +152,7 @@
     "    verbose=True,\n",
     "    reattach=True\n",
     ")\n",
-    "orcmanl.fit(circles)"
+    "orcmanl.fit(return_dict['data'])"
    ]
   },
   {
@@ -148,15 +175,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_graph_2D(X_opt, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tsne = TSNE(n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_tsne, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "fig_dict = animation.animate_2D(\n",
-    "    {\n",
-    "        'Xs': X_frames,\n",
-    "        'G': orcmanl.G\n",
-    "    }\n",
-    ")\n",
-    "fig_sim = go.Figure(fig_dict)\n",
-    "fig_sim.show()"
+    "X_umap = umap.UMAP(n_neighbors=exp_params['n_neighbors'], n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_umap, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distortion(X_opt, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_tsne, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_umap, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())"
    ]
   },
   {
@@ -170,8 +221,7 @@
     "noise = 0.4\n",
     "noise_threshold = 0.75\n",
     "\n",
-    "return_dict = torus(n_points=n_points, noise=noise, noise_thresh=noise_threshold, supersample=True, double=True, supersample_factor=1.0)\n",
-    "torus_data, color, cluster, torus_supersample, subsample_indices = return_dict['data'], return_dict['color'], return_dict['cluster'], return_dict['data_supersample'], return_dict['subsample_indices']"
+    "return_dict = torus(n_points=n_points, noise=noise, noise_thresh=noise_threshold, supersample=True, double=True, supersample_factor=1.0)"
    ]
   },
   {
@@ -218,14 +268,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_dict = animation.animate_3D(\n",
-    "    {\n",
-    "        'Xs': X_frames,\n",
-    "        'G': orcmanl.G\n",
-    "    }\n",
-    ")\n",
-    "fig_sim = go.Figure(fig_dict)\n",
-    "fig_sim.show()"
+    "X_tsne = TSNE(n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_tsne, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_umap = umap.UMAP(n_neighbors=exp_params['n_neighbors'], n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_umap, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distortion(X_opt, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_tsne, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_umap, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())"
    ]
   },
   {
@@ -238,13 +303,6 @@
     "n_points = 2000\n",
     "noise = 0.20\n",
     "noise_thresh = 0.45\n",
-    "\n",
-    "dataset_info = {\n",
-    "    'name': 'quadratics',\n",
-    "    'n_points': n_points,\n",
-    "    'noise': noise,\n",
-    "    'noise_thresh': noise_thresh\n",
-    "}\n",
     "\n",
     "return_dict = quadratics(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
    ]
@@ -284,14 +342,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_dict = animation.animate_2D(\n",
-    "    {\n",
-    "        'Xs': X_frames,\n",
-    "        'G': orcmanl.G\n",
-    "    }\n",
+    "%autoreload 2\n",
+    "plot_graph_2D(X_opt, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tsne = TSNE(n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_tsne, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_umap = umap.UMAP(n_neighbors=exp_params['n_neighbors'], n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_umap, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distortion(X_opt, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_tsne, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_umap, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mixture of gaussians\n",
+    "n_points = 4000\n",
+    "noise_thresh = 0.45\n",
+    "noise = 0.175\n",
+    "\n",
+    "return_dict = mixture_of_gaussians(n_points=n_points, noise=noise, noise_thresh=noise_thresh, supersample=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcmanl = ORCManL(\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    reattach=True\n",
     ")\n",
-    "fig_sim = go.Figure(fig_dict)\n",
-    "fig_sim.show()"
+    "orcmanl.fit(return_dict['data'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isorc = ISORC(orcmanl, dim=2, init='spectral')\n",
+    "X_opt, X_frames = isorc.fit(lr=0.2, n_iter=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graph_2D(X_opt, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tsne = TSNE(n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_tsne, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_umap = umap.UMAP(n_neighbors=exp_params['n_neighbors'], n_components=2).fit_transform(return_dict['data'])\n",
+    "plot_graph_2D(X_umap, orcmanl.G, title=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(distortion(X_opt, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_tsne, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())\n",
+    "print(distortion(X_umap, isorc.intracluster_mask.cpu().numpy().copy(), D_ambient=isorc.geo_dist.cpu().numpy()).copy())"
    ]
   },
   {
