pushing notebooks. orc-weighted geodesics works well for isomap, need to test on others

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -52,10 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%autoreload 2\n",
     "orcmanl = ORCManL(\n",
     "    exp_params=exp_params,\n",
     "    verbose=True,\n",
-    "    reattach=True\n",
+    "    reattach=True,\n",
+    "    nbrhood_size=1\n",
     ")\n",
     "orcmanl.fit(return_dict['data'])"
    ]
@@ -66,7 +68,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graph_3D(return_dict['data'], orcmanl.G_pruned, title=None)"
+    "G_orc = orcmanl.G.copy()\n",
+    "\n",
+    "def kernel_distances(k_ij, d_ij, tau):\n",
+    "    \"\"\"\n",
+    "    Computes the distance of an edge under the logarithmic barrier kernel \n",
+    "    \"\"\"\n",
+    "    return -1/tau * np.log(k_ij + 2) + (d_ij * tau + np.log(3))/tau\n",
+    "\n",
+    "def compute_kernel_distances(G, tau):\n",
+    "    \"\"\"\n",
+    "    Computes the distances of all edges in a graph under the logarithmic barrier kernel\n",
+    "    \"\"\"\n",
+    "    orcs = []\n",
+    "    kdists = []\n",
+    "    for u, v in G.edges():\n",
+    "        d_ij = G[u][v]['weight']\n",
+    "        k_ij = G[u][v]['ricciCurvature']\n",
+    "        G[u][v]['kernel_distance'] = kernel_distances(k_ij, d_ij, tau)\n",
+    "        kdists.append(G[u][v]['kernel_distance'])\n",
+    "        orcs.append(k_ij)\n",
+    "    return G, kdists, orcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_orc, kdists, orcs = compute_kernel_distances(G_orc, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get shortest paths\n",
+    "paths = nx.all_pairs_all_shortest_paths(G_orc, weight='kernel_distance')\n",
+    "# create sp distance matrix using paths but distances determined by A\n",
+    "sp_dist_matrix = np.zeros((len(G_orc.nodes), len(G_orc.nodes)))\n",
+    "for u, u_paths in tqdm(paths, total=len(G_orc.nodes)):\n",
+    "    for v, uv_path in u_paths.items():\n",
+    "        if u == v:\n",
+    "            continue\n",
+    "        uv_path = uv_path[0]\n",
+    "        pathlen = 0\n",
+    "        for i in range(len(uv_path) - 1):\n",
+    "            dist = G_orc[uv_path[i]][uv_path[i+1]]['weight']\n",
+    "            assert dist > 0, \"Distances should be positive\"\n",
+    "            pathlen += dist\n",
+    "        sp_dist_matrix[u][v] = pathlen\n",
+    "        sp_dist_matrix[v][u] = pathlen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sp_dist_matrix[sp_dist_matrix != 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import Isomap\n",
+    "\n",
+    "isomap = Isomap(n_components=2, metric='precomputed')\n",
+    "emb = isomap.fit_transform(sp_dist_matrix)\n",
+    "\n",
+    "plot_data_2D(emb, color=color, title=None)"
    ]
   },
   {
@@ -81,7 +159,7 @@
     "gc.collect()\n",
     "\n",
     "isorc = ISORC(orcmanl, dim=2, init='spectral')\n",
-    "X_opt, losses = isorc.fit_graph(lr=0.5, n_iter=1500)\n",
+    "X_opt, losses = isorc.fit_graph(lr=0.5, n_iter=500)\n",
     "\n",
     "plt.plot(losses)\n",
     "plt.xlabel('Iteration')\n",
@@ -95,7 +173,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_graph_2D(X_opt, orcmanl.G, title=None, node_color=return_dict['color'][orcmanl.G.nodes()])"
+    "# get list of shortcut edges from orcmanl\n",
+    "shortcut_edges_indices = orcmanl.shortcut_edges\n",
+    "# convert to binary array\n",
+    "shortcut_edges = np.zeros(len(orcmanl.G.edges))\n",
+    "shortcut_edges[shortcut_edges_indices] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graph_2D(X_opt, orcmanl.G, title=None, node_color=return_dict['color'][orcmanl.G.nodes()], edge_width=0.25, edge_color=shortcut_edges)"
    ]
   },
   {
@@ -265,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
