--- a/notebooks/real_data.ipynb
+++ b/notebooks/real_data.ipynb
@@ -2,9 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "\t\t\t<script type=\"text/javascript\">\n",
+       "\t\t\t<!--\n",
+       "\t\t\t\t\n",
+       "\t\t\t{\n",
+       "\t\t\t\tvar element = document.getElementById('NetworKit_script');\n",
+       "\t\t\t\tif (element) {\n",
+       "\t\t\t\t\telement.parentNode.removeChild(element);\n",
+       "\t\t\t\t}\n",
+       "\t\t\t\telement = document.createElement('script');\n",
+       "\t\t\t\telement.type = 'text/javascript';\n",
+       "\t\t\t\telement.innerHTML = 'function NetworKit_pageEmbed(id) { var i, j; var elements; elements = document.getElementById(id).getElementsByClassName(\"Plot\"); for (i=0; i<elements.length; i++) { elements[i].id = id + \"_Plot_\" + i; var data = elements[i].getAttribute(\"data-image\").split(\"|\"); elements[i].removeAttribute(\"data-image\"); var content = \"<div class=\\\\\"Image\\\\\" id=\\\\\"\" + elements[i].id + \"_Image\\\\\" />\"; elements[i].innerHTML = content; elements[i].setAttribute(\"data-image-index\", 0); elements[i].setAttribute(\"data-image-length\", data.length); for (j=0; j<data.length; j++) { elements[i].setAttribute(\"data-image-\" + j, data[j]); } NetworKit_plotUpdate(elements[i]); elements[i].onclick = function (e) { NetworKit_overlayShow((e.target) ? e.target : e.srcElement); } } elements = document.getElementById(id).getElementsByClassName(\"HeatCell\"); for (i=0; i<elements.length; i++) { var data = parseFloat(elements[i].getAttribute(\"data-heat\")); var color = \"#00FF00\"; if (data <= 1 && data > 0) { color = \"hsla(0, 100%, 75%, \" + (data) + \")\"; } else if (data <= 0 && data >= -1) { color = \"hsla(240, 100%, 75%, \" + (-data) + \")\"; } elements[i].style.backgroundColor = color; } elements = document.getElementById(id).getElementsByClassName(\"Details\"); for (i=0; i<elements.length; i++) { elements[i].setAttribute(\"data-title\", \"-\"); NetworKit_toggleDetails(elements[i]); elements[i].onclick = function (e) { NetworKit_toggleDetails((e.target) ? e.target : e.srcElement); } } elements = document.getElementById(id).getElementsByClassName(\"MathValue\"); for (i=elements.length-1; i>=0; i--) { value = elements[i].innerHTML.trim(); if (value === \"nan\") { elements[i].parentNode.innerHTML = \"\" } } elements = document.getElementById(id).getElementsByClassName(\"SubCategory\"); for (i=elements.length-1; i>=0; i--) { value = elements[i].innerHTML.trim(); if (value === \"\") { elements[i].parentNode.removeChild(elements[i]) } } elements = document.getElementById(id).getElementsByClassName(\"Category\"); for (i=elements.length-1; i>=0; i--) { value = elements[i].innerHTML.trim(); if (value === \"\") { elements[i].parentNode.removeChild(elements[i]) } } var isFirefox = false; try { isFirefox = typeof InstallTrigger !== \"undefined\"; } catch (e) {} if (!isFirefox) { alert(\"Currently the function\\'s output is only fully supported by Firefox.\"); } } function NetworKit_plotUpdate(source) { var index = source.getAttribute(\"data-image-index\"); var data = source.getAttribute(\"data-image-\" + index); var image = document.getElementById(source.id + \"_Image\"); image.style.backgroundImage = \"url(\" + data + \")\"; } function NetworKit_showElement(id, show) { var element = document.getElementById(id); element.style.display = (show) ? \"block\" : \"none\"; } function NetworKit_overlayShow(source) { NetworKit_overlayUpdate(source); NetworKit_showElement(\"NetworKit_Overlay\", true); } function NetworKit_overlayUpdate(source) { document.getElementById(\"NetworKit_Overlay_Title\").innerHTML = source.title; var index = source.getAttribute(\"data-image-index\"); var data = source.getAttribute(\"data-image-\" + index); var image = document.getElementById(\"NetworKit_Overlay_Image\"); image.setAttribute(\"data-id\", source.id); image.style.backgroundImage = \"url(\" + data + \")\"; var link = document.getElementById(\"NetworKit_Overlay_Toolbar_Bottom_Save\"); link.href = data; link.download = source.title + \".svg\"; } function NetworKit_overlayImageShift(delta) { var image = document.getElementById(\"NetworKit_Overlay_Image\"); var source = document.getElementById(image.getAttribute(\"data-id\")); var index = parseInt(source.getAttribute(\"data-image-index\")); var length = parseInt(source.getAttribute(\"data-image-length\")); var index = (index+delta) % length; if (index < 0) { index = length + index; } source.setAttribute(\"data-image-index\", index); NetworKit_overlayUpdate(source); } function NetworKit_toggleDetails(source) { var childs = source.children; var show = false; if (source.getAttribute(\"data-title\") == \"-\") { source.setAttribute(\"data-title\", \"+\"); show = false; } else { source.setAttribute(\"data-title\", \"-\"); show = true; } for (i=0; i<childs.length; i++) { if (show) { childs[i].style.display = \"block\"; } else { childs[i].style.display = \"none\"; } } }';\n",
+       "\t\t\t\telement.setAttribute('id', 'NetworKit_script');\n",
+       "\t\t\t\tdocument.head.appendChild(element);\n",
+       "\t\t\t}\n",
+       "\t\t\n",
+       "\t\t\t\t\n",
+       "\t\t\t{\n",
+       "\t\t\t\tvar element = document.getElementById('NetworKit_style');\n",
+       "\t\t\t\tif (element) {\n",
+       "\t\t\t\t\telement.parentNode.removeChild(element);\n",
+       "\t\t\t\t}\n",
+       "\t\t\t\telement = document.createElement('style');\n",
+       "\t\t\t\telement.type = 'text/css';\n",
+       "\t\t\t\telement.innerHTML = '.NetworKit_Page { font-family: Arial, Helvetica, sans-serif; font-size: 14px; } .NetworKit_Page .Value:before { font-family: Arial, Helvetica, sans-serif; font-size: 1.05em; content: attr(data-title) \":\"; margin-left: -2.5em; padding-right: 0.5em; } .NetworKit_Page .Details .Value:before { display: block; } .NetworKit_Page .Value { font-family: monospace; white-space: pre; padding-left: 2.5em; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; white-space: pre-wrap; word-wrap: break-word; tab-size: 4; -moz-tab-size: 4; } .NetworKit_Page .Category { clear: both; padding-left: 1em; margin-bottom: 1.5em; } .NetworKit_Page .Category:before { content: attr(data-title); font-size: 1.75em; display: block; margin-left: -0.8em; margin-bottom: 0.5em; } .NetworKit_Page .SubCategory { margin-bottom: 1.5em; padding-left: 1em; } .NetworKit_Page .SubCategory:before { font-size: 1.6em; display: block; margin-left: -0.8em; margin-bottom: 0.5em; } .NetworKit_Page .SubCategory[data-title]:before { content: attr(data-title); } .NetworKit_Page .Block { display: block; } .NetworKit_Page .Block:after { content: \".\"; visibility: hidden; display: block; height: 0; clear: both; } .NetworKit_Page .Block .Thumbnail_Overview, .NetworKit_Page .Block .Thumbnail_ScatterPlot { width: 260px; float: left; } .NetworKit_Page .Block .Thumbnail_Overview img, .NetworKit_Page .Block .Thumbnail_ScatterPlot img { width: 260px; } .NetworKit_Page .Block .Thumbnail_Overview:before, .NetworKit_Page .Block .Thumbnail_ScatterPlot:before { display: block; text-align: center; font-weight: bold; } .NetworKit_Page .Block .Thumbnail_Overview:before { content: attr(data-title); } .NetworKit_Page .HeatCell { font-family: \"Courier New\", Courier, monospace; cursor: pointer; } .NetworKit_Page .HeatCell, .NetworKit_Page .HeatCellName { display: inline; padding: 0.1em; margin-right: 2px; background-color: #FFFFFF } .NetworKit_Page .HeatCellName { margin-left: 0.25em; } .NetworKit_Page .HeatCell:before { content: attr(data-heat); display: inline-block; color: #000000; width: 4em; text-align: center; } .NetworKit_Page .Measure { clear: both; } .NetworKit_Page .Measure .Details { cursor: pointer; } .NetworKit_Page .Measure .Details:before { content: \"[\" attr(data-title) \"]\"; display: block; } .NetworKit_Page .Measure .Details .Value { border-left: 1px dotted black; margin-left: 0.4em; padding-left: 3.5em; pointer-events: none; } .NetworKit_Page .Measure .Details .Spacer:before { content: \".\"; opacity: 0.0; pointer-events: none; } .NetworKit_Page .Measure .Plot { width: 440px; height: 440px; cursor: pointer; float: left; margin-left: -0.9em; margin-right: 20px; } .NetworKit_Page .Measure .Plot .Image { background-repeat: no-repeat; background-position: center center; background-size: contain; height: 100%; pointer-events: none; } .NetworKit_Page .Measure .Stat { width: 500px; float: left; } .NetworKit_Page .Measure .Stat .Group { padding-left: 1.25em; margin-bottom: 0.75em; } .NetworKit_Page .Measure .Stat .Group .Title { font-size: 1.1em; display: block; margin-bottom: 0.3em; margin-left: -0.75em; border-right-style: dotted; border-right-width: 1px; border-bottom-style: dotted; border-bottom-width: 1px; background-color: #D0D0D0; padding-left: 0.2em; } .NetworKit_Page .Measure .Stat .Group .List { -webkit-column-count: 3; -moz-column-count: 3; column-count: 3; } .NetworKit_Page .Measure .Stat .Group .List .Entry { position: relative; line-height: 1.75em; } .NetworKit_Page .Measure .Stat .Group .List .Entry[data-tooltip]:before { position: absolute; left: 0; top: -40px; background-color: #808080; color: #ffffff; height: 30px; line-height: 30px; border-radius: 5px; padding: 0 15px; content: attr(data-tooltip); white-space: nowrap; display: none; } .NetworKit_Page .Measure .Stat .Group .List .Entry[data-tooltip]:after { position: absolute; left: 15px; top: -10px; border-top: 7px solid #808080; border-left: 7px solid transparent; border-right: 7px solid transparent; content: \"\"; display: none; } .NetworKit_Page .Measure .Stat .Group .List .Entry[data-tooltip]:hover:after, .NetworKit_Page .Measure .Stat .Group .List .Entry[data-tooltip]:hover:before { display: block; } .NetworKit_Page .Measure .Stat .Group .List .Entry .MathValue { font-family: \"Courier New\", Courier, monospace; } .NetworKit_Page .Measure:after { content: \".\"; visibility: hidden; display: block; height: 0; clear: both; } .NetworKit_Page .PartitionPie { clear: both; } .NetworKit_Page .PartitionPie img { width: 600px; } #NetworKit_Overlay { left: 0px; top: 0px; display: none; position: absolute; width: 100%; height: 100%; background-color: rgba(0,0,0,0.6); z-index: 1000; } #NetworKit_Overlay_Title { position: absolute; color: white; transform: rotate(-90deg); width: 32em; height: 32em; padding-right: 0.5em; padding-top: 0.5em; text-align: right; font-size: 40px; } #NetworKit_Overlay .button { background: white; cursor: pointer; } #NetworKit_Overlay .button:before { size: 13px; display: inline-block; text-align: center; margin-top: 0.5em; margin-bottom: 0.5em; width: 1.5em; height: 1.5em; } #NetworKit_Overlay .icon-close:before { content: \"X\"; } #NetworKit_Overlay .icon-previous:before { content: \"P\"; } #NetworKit_Overlay .icon-next:before { content: \"N\"; } #NetworKit_Overlay .icon-save:before { content: \"S\"; } #NetworKit_Overlay_Toolbar_Top, #NetworKit_Overlay_Toolbar_Bottom { position: absolute; width: 40px; right: 13px; text-align: right; z-index: 1100; } #NetworKit_Overlay_Toolbar_Top { top: 0.5em; } #NetworKit_Overlay_Toolbar_Bottom { Bottom: 0.5em; } #NetworKit_Overlay_ImageContainer { position: absolute; top: 5%; left: 5%; height: 90%; width: 90%; background-repeat: no-repeat; background-position: center center; background-size: contain; } #NetworKit_Overlay_Image { height: 100%; width: 100%; background-repeat: no-repeat; background-position: center center; background-size: contain; }';\n",
+       "\t\t\t\telement.setAttribute('id', 'NetworKit_style');\n",
+       "\t\t\t\tdocument.head.appendChild(element);\n",
+       "\t\t\t}\n",
+       "\t\t\n",
+       "\t\t\t\t\n",
+       "\t\t\t{\n",
+       "\t\t\t\tvar element = document.getElementById('NetworKit_Overlay');\n",
+       "\t\t\t\tif (element) {\n",
+       "\t\t\t\t\telement.parentNode.removeChild(element);\n",
+       "\t\t\t\t}\n",
+       "\t\t\t\telement = document.createElement('div');\n",
+       "\t\t\t\telement.innerHTML = '<div id=\"NetworKit_Overlay_Toolbar_Top\"><div class=\"button icon-close\" id=\"NetworKit_Overlay_Close\" /></div><div id=\"NetworKit_Overlay_Title\" /> <div id=\"NetworKit_Overlay_ImageContainer\"> <div id=\"NetworKit_Overlay_Image\" /> </div> <div id=\"NetworKit_Overlay_Toolbar_Bottom\"> <div class=\"button icon-previous\" onclick=\"NetworKit_overlayImageShift(-1)\" /> <div class=\"button icon-next\" onclick=\"NetworKit_overlayImageShift(1)\" /> <a id=\"NetworKit_Overlay_Toolbar_Bottom_Save\"><div class=\"button icon-save\" /></a> </div>';\n",
+       "\t\t\t\telement.setAttribute('id', 'NetworKit_Overlay');\n",
+       "\t\t\t\tdocument.body.appendChild(element);\n",
+       "\t\t\t\tdocument.getElementById('NetworKit_Overlay_Close').onclick = function (e) {\n",
+       "\t\t\t\t\tdocument.getElementById('NetworKit_Overlay').style.display = 'none';\n",
+       "\t\t\t\t}\n",
+       "\t\t\t}\n",
+       "\t\t\n",
+       "\t\t\t-->\n",
+       "\t\t\t</script>\n",
+       "\t\t"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from src.data.data import *\n",
     "from src.orcml import *\n",
@@ -21,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +117,56 @@
     "        indices = np.random.choice(mnist_data.shape[0], n_samples, replace=False)\n",
     "        mnist_data = mnist_data[indices]\n",
     "        mnist_labels = mnist_labels[indices]\n",
-    "    return mnist_data, mnist_labels"
+    "    return mnist_data, mnist_labels\n",
+    "\n",
+    "# kmnist: path data/KMNIST/t10k-images-idx3-ubyte.gz\n",
+    "\n",
+    "def get_kmnist_data(n_samples, label=None):\n",
+    "    \"\"\"\n",
+    "    Get n_samples KMNIST data points with the specified label. If label is None, get n_samples random data points.\n",
+    "    Parameters:\n",
+    "\n",
+    "    n_samples: int\n",
+    "        Number of data points to get\n",
+    "    label: int or None\n",
+    "        Label of the data points to get. If None, get random data points.\n",
+    "    Returns:\n",
+    "    ----------\n",
+    "    kmnist_data: np.ndarray\n",
+    "        n_samples x 784 array of KMNIST data points\n",
+    "    kmnist_labels: np.ndarray\n",
+    "        n_samples array of KMNIST labels\n",
+    "    \"\"\"\n",
+    "    transform = torchvision.transforms.Compose([\n",
+    "        torchvision.transforms.ToTensor(),\n",
+    "        torchvision.transforms.Lambda(lambda x: x.view(-1))\n",
+    "    ])\n",
+    "    kmnist = torchvision.datasets.KMNIST('data', train=True, download=True, transform=transform)\n",
+    "    kmnist_data = torch.stack([x for x, _ in kmnist]).numpy().astype(np.float64)\n",
+    "    # scale so distances are in a reasonable range\n",
+    "    kmnist_labels = torch.tensor([y for _, y in kmnist]).numpy().astype(np.float64)\n",
+    "    if label is not None:\n",
+    "        label_indices = np.where(kmnist_labels == label)[0]\n",
+    "        np.random.seed(0)\n",
+    "        np.random.shuffle(label_indices)\n",
+    "        label_indices = label_indices[:n_samples]\n",
+    "        kmnist_data = kmnist_data[label_indices]\n",
+    "        kmnist_labels = kmnist_labels[label_indices]\n",
+    "    else:\n",
+    "        np.random.seed(0)\n",
+    "        indices = np.random.choice(kmnist_data.shape[0], n_samples, replace=False)\n",
+    "        kmnist_data = kmnist_data[indices]\n",
+    "        kmnist_labels = kmnist_labels[indices]\n",
+    "    return kmnist_data, kmnist_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist_data, mnist_labels = get_mnist_data(5000)"
+    "mnist_data, mnist_labels = get_mnist_data(4000)"
    ]
   },
   {
@@ -128,7 +224,97 @@
    "outputs": [],
    "source": [
     "%autoreload 2\n",
-    "plot_graph_2D(X_opt, orcmanl.G, title=None, node_color=mnist_labels[orcmanl.G.nodes()], edge_width=0.1, edge_color=shortcut_edges)"
+    "plot_graph_2D(X_opt, orcmanl.G, title=None, node_color=mnist_labels[orcmanl.G.nodes()], edge_width=0.1, edge_color=shortcut_edges, node_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmnist_data, kmnist_labels = get_kmnist_data(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orcmanl = ORCManL(\n",
+    "    exp_params=exp_params,\n",
+    "    verbose=True,\n",
+    "    reattach=True\n",
+    ")\n",
+    "orcmanl.fit(kmnist_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "import gc\n",
+    "torch.cuda.empty_cache()\n",
+    "gc.collect()\n",
+    "isorc = ISORC(orcmanl, init='ambient', dim=2)\n",
+    "X_opt, losses = isorc.fit_graph(lr=0.2, n_iter=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get list of shortcut edges from orcmanl\n",
+    "shortcut_edges_indices = orcmanl.shortcut_edges\n",
+    "# convert to binary array\n",
+    "shortcut_edges = np.zeros(len(orcmanl.G.edges))\n",
+    "shortcut_edges[shortcut_edges_indices] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "X_opt_spectral = sklearn.manifold.SpectralEmbedding(n_components=2).fit_transform(kmnist_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "plot_graph_2D(X_opt_spectral, orcmanl.G, title=None, node_color=kmnist_labels[orcmanl.G.nodes()], edge_width=0.1, edge_color=shortcut_edges, node_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#umap\n",
+    "umap_data = umap.UMAP(n_neighbors=15, min_dist=0.1).fit_transform(kmnist_data)\n",
+    "plot_graph_2D(umap_data, orcmanl.G, title=None, node_color=kmnist_labels[orcmanl.G.nodes()], edge_width=0.1, edge_color=shortcut_edges, node_size=0.1)"
    ]
   },
   {
@@ -139,8 +325,8 @@
    "source": [
     "from sklearn.manifold import Isomap\n",
     "iso = Isomap(n_components=2)\n",
-    "X_iso = iso.fit_transform(mnist_data)\n",
-    "plot_graph_2D(X_iso, orcmanl.G, title=None, node_color=mnist_labels[orcmanl.G.nodes()], edge_width=0.1)"
+    "X_iso = iso.fit_transform(kmnist_data)\n",
+    "plot_graph_2D(X_iso, orcmanl.G, title=None, node_color=kmnist_labels[orcmanl.G.nodes()], edge_width=0.1)"
    ]
   },
   {
